--- a/socket/index.html
+++ b/socket/index.html
@@ -106,7 +106,11 @@
             socket.on('emit-receive-message',(payload) => {
                 console.log(`Message received: ${JSON.stringify(payload)}`);
                 console.log(`Message received: ${JSON.stringify(payload.message.mid)}`);
-                if(payload.message.status < 2){
+
+                //send push only if message is a received message and message status is sent(==1)
+
+                if(payload.message.status < 2 && payload.message.from !== userId){
+                    pushNotification(payload.message);
                     emitDelivered(payload.message.mid);
                 }
             });
@@ -122,7 +126,7 @@
                 mid:`${uid}-${Date.now()}`,
                 from: userId,
                 to:2,
-                content: "Message New Message",
+                content: "Message New Message" + Date.now(),
                 type:"TEXT",
             };
             console.clear();
@@ -139,6 +143,33 @@
         function disconnect(){
             socket.disconnect(true);
             console.log("Disconnected")
+        }
+
+
+        function pushNotification(message) {
+            // Let's check if the browser supports notifications
+            if (!("Notification" in window)) {
+                alert("This browser does not support desktop notification");
+            }
+
+            // Let's check whether notification permissions have already been granted
+            else if (Notification.permission === "granted") {
+                // If it's okay let's create a notification
+                new Notification(`${message.sender.name}: ${message.content}`);
+            }
+
+            // Otherwise, we need to ask the user for permission
+            else if (Notification.permission !== "denied") {
+                Notification.requestPermission().then(function (permission) {
+                    // If the user accepts, let's create a notification
+                    if (permission === "granted") {
+                        new Notification(`${message.sender.name}: ${message.content}`);
+                    }
+                });
+            }
+
+            // At last, if the user has denied notifications, and you
+            // want to be respectful there is no need to bother them any more.
         }
     </script>
 </html>
