--- a/socket/agent.html
+++ b/socket/agent.html
@@ -89,10 +89,11 @@
         let prod = false;
 
         let uid = "6379e69d-b80a-47e7-a4b8-4b261e67ab22";
-        let userId = prod ? 3 : 2;
+        let userId = prod ? 8 : 8;
         let socket;
         let liveUrl = "https://shrouded-lowlands.herokuapp.com";
-        let localUrl = "http://localhost:3000";
+        let localUrl = "http://localhost:3089";
+        let messages = [];
         function init(){
             socket === null ? socket.disconnect() : console.log("Socket is Null");
             console.clear();
@@ -104,12 +105,14 @@
             // console.log('Socket: '+ socket);
             socket.on('connected', (payload) => {
                 console.log(`Connected: ${payload.payload}`);
-                const pay = {userId: userId, lastMessageId: 0};
+                const pay = {userId: userId, lastMessageId: 0, limit: 5};
                 socket.emit('event-initialization',pay);
             });
 
             socket.on('emit-receive-message',(payload) => {
                 console.log(`Message received: ${JSON.stringify(payload)}`);
+                messages.push(payload);
+                console.log("Message Count", messages.length);
             });
 
             socket.on('emit-error',(payload) =>{
