--- a/socket/index.html
+++ b/socket/index.html
@@ -90,7 +90,7 @@
     let userId = prod ? 4 : 3;
     let uid = "6379e69d-b80a-47e7-a4b8-4b261e67ab22";
     let socket;
-    let liveUrl = "http://phoenix.chiji14xchange.com:3089/";
+    let liveUrl = "https://phoenix.chiji14xchange.com/";
     // let liveUrl = "https://phoenix.chiji14xchange.com";
     let localUrl = "http://localhost:8000";
     let lastMessageId = 172;
